--- a/main.css
+++ b/main.css
@@ -1,20 +1,47 @@
-.body-image {
-    width: 100%;
-}
-.body-image-div {
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 20px;
-}
-iframe {
-    padding-top: 10px;
-}
 .caption {
     display: none;
     font-size: .9rem;
     position: relative;
     top: -20px;
 }
+
+nav a:link {
+    color: #800000 !important;
+}
+
+nav a:visited{
+    color: #800000 !important;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+nav a:active {
+    color: red;
+}
+
+ul, li {
+  list-style:none;
+  list-style-type:none;
+  font-size: 0.9em;
+  font-family: Impact, Charcoal, sans-serif;
+  letter-spacing: 1px;
+  background-color: rgba(192, 192, 192, 0.5);
+}
+
+.sidebar {
+    float: right;
+    right: 35px;
+    width: 125px;
+    padding-top: 375px;
+    position: fixed;
+    overflow-y: auto;
+    transition: all 0.4s ease 0s;
+    margin: 0;
+    z-index: 1000;
+}
+
 .row {
     margin-left: 0;
     margin-right: 0;
@@ -26,9 +53,24 @@ iframe {
     margin-bottom: 0;
 }
 
-.text {
+.title {
+    padding-top: 10px;
     margin: 0;
     font-family: "Crimson Text", "Georgia", Cambria, Times New Roman, Times, serif;
+}
+
+.subtitle {
+    padding-top: 10px;
+}
+
+h3 {
+    a {
+      color: white;
+      &:hover, &:visited, &active {
+        color: white;
+        text-decoration: underline;
+      }
+    }
 }
 .credit {
     color: #BBBBBB;
@@ -37,28 +79,42 @@ iframe {
 .navbar-header:after {
     clear: none;
 }
+
+.section-container {
+    color: #800000;
+    font-size: 0.5rem;
+    text-align: center;
+    display: inline-block;
+    margin: 0;
+    font-family: "Crimson Text", "Georgia", Cambria, Times New Roman, Times, serif;
+}
 .body-text {
     padding-top: 20px;
     color: #333333;
     font-size: 1.0rem;
     line-height: 1.45;
+    text-align: center;
 }
 
-.fullscreen {
-    background: url(img/IMG_6629-full.jpg) no-repeat center center fixed;
+.fullscreen-picture {
+    background: url([image]) no-repeat center center fixed;
     background-size: cover;
     height: 85vh;
+    padding-top: 45px;
     padding-left: 0;
     padding-right: 0;
 }
 .text-background {
-    background-color: rgba(50, 50, 50, .8);
-    height: 50%;
+    background-color: rgba(128,0,0,0.5);
+    height: 35%;
+    width: 100%;
     text-align: center;
+    position: absolute;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
 }
-.push-down {
-    height: 50%;
-}
+
 .container {
     width: 100%;
     padding: 0;
@@ -77,6 +133,7 @@ iframe {
 
 p {
     padding-top: 13px;
+    text-align: center;
 }
 .navbar-brand > img {
     height: 40px
@@ -92,7 +149,6 @@ p {
     right: 0;
 }
 p.first-paragraph:first-letter {
-    float: left;
     font-size: 75px;
     line-height: 60px;
     padding-top: 4px;
@@ -106,10 +162,9 @@ p.first-paragraph:first-letter {
 #comments {
     right: 75px;
 }
-.section-art-hr {
+.section-link {
     color: #FFFFFF;
     width: 150px;
-    margin-top: 5px;
     border: 0;
     height: 1px;
     background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
@@ -117,11 +172,10 @@ p.first-paragraph:first-letter {
     background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
 }
-.section-art {
+.section-container {
     font-size: 1em;
     color: #fff;
     position: relative;
-    display: inline-block;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
     /*background: maroon;*/
     padding: 0.4em 1em;
@@ -129,7 +183,9 @@ p.first-paragraph:first-letter {
     /*margin-bottom: 0.75em;*/
     font-weight: 700;
     text-shadow: 0px 2px 3px maroon;
+    text-align: center;
 }
+
 div.social-icon-container {
     font-size: 1rem;
 }
@@ -139,8 +195,4 @@ footer {
     color: #BBBBBB;
     font-size: .7rem;
     padding-bottom: 10px;
-}
-
-.following-photo {
-    padding-top: 0;
 }
