--- a/main.css
+++ b/main.css
@@ -6,52 +6,45 @@
 }
 
 nav a:link {
-    color: rgba(128,0,0,0.4) !important;
+    color: rgba(128,0,0,0.9);
 }
 
 nav a:visited{
-    color: rgba(128,0,0,0.4) !important;
+    color: rgba(128,0,0,0.9);
 }
 
 nav a:hover {
-    text-decoration: underline;
-    text-decoration-color: white;
+    opacity: 0.7;
+    text-decoration: none;
 }
 
 nav a:active {
-    color: rgba(128,0,0,0.4) 
+    color: rgba(128,0,0,0.9)
 }
 
 ul, li {
-  list-style:none;
-  list-style-type:none;
+  list-style: none;
   font-size: 0.9em;
   font-family: Impact, Charcoal, sans-serif;
-  letter-spacing: 1px;
-  background-color: rgba(192, 192, 192, 0.3);
+  letter-spacing: 1.5px;
 }
 
 .sidebar {
     float: right;
     right: 35px;
     width: 125px;
-    padding-top: 450px;
-    position: fixed;
-    overflow-y: auto;
-    transition: all 0.4s ease 0s;
-    margin: 0;
-    z-index: 1000;
+    padding-top: 375px;
+    position:fixed;
+    margin: 0px;
 }
 
 .row {
     margin-left: 0;
     margin-right: 0;
 }
+
 #disqus_thread {
     padding-top: 20px;
-}
-.no-margin-bottom {
-    margin-bottom: 0;
 }
 
 .title {
@@ -73,9 +66,8 @@ h3 a:visited {
 }
 
 h3 a:hover{
-    color: white !important;
+    color: white;
     text-decoration: underline;
-    text-decoration-color: white;
 }
 
 h3 a:active{
@@ -90,20 +82,28 @@ h3 a:active{
     clear: none;
 }
 
+.text-background {
+    background-color: #800000;
+    height: 35%;
+    width: 100%;
+    text-align: center;
+    position: fixed;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.container {
+    width: 100%;
+    padding: 0;
+    margin: 0 auto;
+}
+
 .section-container {
     color: #800000;
     font-size: 0.5rem;
     text-align: center;
-    display: inline-block;
-    margin: 0;
+    margin: 0px;
     font-family: "Crimson Text", "Georgia", Cambria, Times New Roman, Times, serif;
-}
-.body-text {
-    padding-top: 20px;
-    color: #333333;
-    font-size: 1.0rem;
-    line-height: 1.45;
-    text-align: center;
 }
 
 .fullscreen-picture {
@@ -114,16 +114,9 @@ h3 a:active{
     padding-left: 0;
     padding-right: 0;
 }
-.text-background {
-    background-color: rgba(128,0,0,0.5);
-    height: 35%;
-    width: 100%;
-    text-align: center;
-    position: absolute;
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 376px;
+
+.push-down {
+    height: 50%
 }
 
 .section-link {
@@ -136,6 +129,7 @@ h3 a:active{
     background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
 }
+
 .section-container {
     font-size: 1em;
     color: #fff;
@@ -160,14 +154,14 @@ h3 a:active{
       color: #fff;
       text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
       text-shadow: 0px 2px 3px maroon;
-      text-decoration: underline !important;
+      text-decoration: underline;
 }
 
 .section-container a:active {
       color: #fff;
       text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
       text-shadow: 0px 2px 3px maroon;
-      text-decoration: underline !important;
+      text-decoration: underline;
 }
 
 .section-container a:hover {
@@ -177,13 +171,8 @@ h3 a:active{
       text-decoration: underline;
 }
 
-.container {
-    width: 100%;
-    padding: 0;
-    margin: 0 auto;
-}
 .cover-photo.credit {
-    padding-left: 30px;
+    padding-left: 25px;
 }
 
 .quotation-text {
@@ -191,6 +180,14 @@ h3 a:active{
     font-weight: 600;
     padding-top: 10px;
     margin: 0 auto;
+    text-align: center;
+}
+
+.body-text {
+    padding-top: 40px;
+    color: #333333;
+    font-size: 1.0rem;
+    line-height: 1.45;
     text-align: center;
 }
 
@@ -228,11 +225,4 @@ p.first-paragraph:first-letter {
 
 div.social-icon-container {
     font-size: 1rem;
-}
-footer {
-    text-align: center;
-    padding-top: 50px;
-    color: #BBBBBB;
-    font-size: .7rem;
-    padding-bottom: 10px;
 }
