--- a/main.css
+++ b/main.css
@@ -31,9 +31,9 @@ ul, li {
 
 .sidebar {
     float: right;
-    right: 35px;
+    right: 70px;
     width: 125px;
-    padding-top: 375px;
+    padding-top: 450px;
     position:fixed;
     margin: 0px;
 }
@@ -83,13 +83,13 @@ h3 a:active{
 }
 
 .text-background {
-    background-color: #800000;
-    height: 35%;
+    background-color: rgba(0,0,0,0.6);
     width: 100%;
+    height: 50%;
     text-align: center;
-    position: fixed;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 325px;
 }
 
 .container {
@@ -109,7 +109,7 @@ h3 a:active{
 .fullscreen-picture {
     background: url(http://cdn.playbuzz.com/cdn/7a7a5814-ed79-410c-b748-db6a24f73f0b/4d71c010-f930-4334-ba62-79d87a7ddef4.jpg) no-repeat center center fixed;
     background-size: cover;
-    height: 85vh;
+    height: 30%;
     padding-top: 45px;
     padding-left: 0;
     padding-right: 0;
@@ -192,9 +192,9 @@ h3 a:active{
 }
 
 p {
-    padding-top: 13px;
-    text-align: center;
+    text-align: left !important;
 }
+
 .navbar-brand > img {
     height: 40px
 }
@@ -215,6 +215,16 @@ p.first-paragraph:first-letter {
     padding-right: 8px;
     padding-left: 3px;
 }
+
+.body-image {
+    width: 100%;
+}
+.body-image-div {
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 20px;
+}
+
 .right {
     float: right;
 }
