--- a/main.css
+++ b/main.css
@@ -4,76 +4,62 @@
     position: relative;
     top: -20px;
 }
-
 nav a:link {
-    color: rgba(128,0,0,0.9);
+    color: rgba(128, 0, 0, 0.9);
 }
-
-nav a:visited{
-    color: rgba(128,0,0,0.9);
+nav a:visited {
+    color: rgba(128, 0, 0, 0.9);
 }
-
 nav a:hover {
     opacity: 0.7;
     text-decoration: none;
 }
-
 nav a:active {
-    color: rgba(128,0,0,0.9)
+    color: rgba(128, 0, 0, 0.9)
 }
-
-ul, li {
-  list-style: none;
-  font-size: 0.9em;
-  font-family: 'Josefin Sans', sans-serif;
-  letter-spacing: 1.5px;
+ul,
+li {
+    list-style: none;
+    font-size: 0.9em;
+    font-family: 'Josefin Sans', sans-serif;
+    letter-spacing: 1.5px;
 }
-
 .sidebar {
     float: right;
     right: 70px;
     width: 200px;
-    padding-top: 450px;
+    margin-top: 440px;
     position: fixed;
 }
-
 .row {
     margin-left: 0;
     margin-right: 0;
 }
-
 #disqus_thread {
     padding-top: 20px;
 }
-
 .title {
     padding-top: 10px;
     margin: 0;
     font-family: "Crimson Text", "Georgia", Cambria, Times New Roman, Times, serif;
 }
-
 .subtitle {
     padding-top: 10px;
 }
-
 h3 a:link {
     color: white !important;
 }
-
 h3 a:visited {
     color: white !important;
 }
-
-h3 a:hover{
+h3 a:hover {
     color: white;
     text-decoration: none;
     opacity: 0.6;
 }
-
-h3 a:active{
+h3 a:active {
     color: white !important;
 }
-
 .credit {
     color: #BBBBBB;
     font-size: .7rem;
@@ -81,9 +67,8 @@ h3 a:active{
 .navbar-header:after {
     clear: none;
 }
-
 .text-background {
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 50%;
     text-align: center;
@@ -91,13 +76,11 @@ h3 a:active{
     margin-right: auto;
     margin-top: 325px;
 }
-
 .container {
     width: 100%;
     padding: 0;
     margin: 0 auto;
 }
-
 .fullscreen-picture {
     background: url(http://cdn.playbuzz.com/cdn/7a7a5814-ed79-410c-b748-db6a24f73f0b/4d71c010-f930-4334-ba62-79d87a7ddef4.jpg) no-repeat center center fixed;
     background-size: cover;
@@ -106,11 +89,9 @@ h3 a:active{
     padding-left: 0;
     padding-right: 0;
 }
-
 .push-down {
     height: 50%
 }
-
 .section-link {
     color: #FFFFFF;
     width: 150px;
@@ -121,7 +102,6 @@ h3 a:active{
     background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
     background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
 }
-
 .section-container {
     font-size: 1em;
     font-family: "Crimson Text", "Georgia", Cambria, Times New Roman, Times, serif;
@@ -129,6 +109,7 @@ h3 a:active{
     position: relative;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
     /*background: maroon;*/
+
     padding: 0.4em 1em;
     padding-bottom: 0;
     margin-bottom: 0.5em;
@@ -137,29 +118,25 @@ h3 a:active{
     text-align: center;
 }
 .section-container a:link {
-      color: #fff;
-      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
-      text-shadow: 0px 2px 3px maroon;
+    color: #fff;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+    text-shadow: 0px 2px 3px maroon;
 }
-
 .section-container a:hover {
-      color: #fff;
-      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
-      text-shadow: 0px 2px 3px maroon;
-      text-decoration: none;
-      opacity: 0.4;
+    color: #fff;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+    text-shadow: 0px 2px 3px maroon;
+    text-decoration: none;
+    opacity: 0.4;
 }
-
 .section-container a:active {
-      color: #fff;
-      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
-      text-shadow: 0px 2px 3px maroon;
+    color: #fff;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+    text-shadow: 0px 2px 3px maroon;
 }
-
 .cover-photo.credit {
     padding-left: 25px;
 }
-
 .quotation-text {
     font-style: italic;
     font-weight: 600;
@@ -167,16 +144,13 @@ h3 a:active{
     margin: 0 auto;
     text-align: center;
 }
-
 .body-text {
     font-size: 1.0rem;
     line-height: 1.45;
 }
-
 p {
     text-align: left
 }
-
 .navbar-brand > img {
     height: 40px
 }
@@ -197,7 +171,6 @@ p.first-paragraph:first-letter {
     padding-right: 8px;
     padding-left: 3px;
 }
-
 .body-image {
     width: 100%;
 }
@@ -206,41 +179,18 @@ p.first-paragraph:first-letter {
     padding-right: 0;
     padding-top: 20px;
 }
-
 .right {
     float: right;
 }
-
 #comments {
     right: 75px;
 }
-
 div.social-icon-container {
     font-size: 1rem;
 }
-
-@media all and (max-height: 375px) and (min-height: 0px) {
-  ul, li {
-    visibility: hidden;
-  }
-}
-@media all and (max-height: 490px) and (min-height: 376px) {
-  ul, li {
-    visibility: hidden;
-  }
-}
-@media all and (max-height: 615px) and (min-height: 491px) {
-  ul, li {
-    visibility: hidden;
-  }
-}
-@media all and (max-width: 767px) and (min-width: 650px) {
-  ul, li {
-    visibility: hidden;
-  }
-}
-@media all and (max-width: 649px) and (min-width: 0px) {
-  ul, li {
-    visibility: hidden;
-  }
+@media all and (max-width: 1000px) and (min-width: 0px) {
+    ul,
+    li {
+        visibility: hidden;
+    }
 }
